<resources>
    <string name="app_name">CleverCards</string>
    <string name="welcome_to_clevercards">Welcome to CleverCards</string>
    <string name="user">User</string>
    <string name="no_courses_yet">No courses yet. Admin must create or assign a course to get started!</string>
    <string name="sign_out">Sign Out</string>
    <string name="course_name">Course Name</string>
    <string name="confirm_sign_out">Confirm Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="preference_userId_key">PreferenceUserIdKeyCleverCards</string>
    <string name="preference_file_key">daclinkPrefernceFileNameCleverCards</string>
    <string name="create_course">Create Course</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_number_of_flashcards">Enter Number of Flashcards</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="view_users">View Users</string>
    <string name="edit_users">Edit Users</string>
    <string name="administrator">Administrator</string>
    <string name="create_password">Create Password</string>
    <string name="create_username">Create Username</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_back_text">Enter Back Text</string>
    <string name="create_new_user">Create New User</string>
    <string name="submit">Submit</string>
    <string name="all_flashcards">All Flashcards</string>
    <string name="add_flashcard">Add Flashcard</string>
    <string name="front">Front</string>
    <string name="flashcard_view">Flashcard View</string>
    <string name="return_to_dashboard">Return to Dashboard</string>
    <string name="go_back">Go Back</string>
    <string name="create">Create</string>
    <string name="create_flashcard">Create Flashcard</string>
    <string name="enter_front_text">Enter Front Text</string>


</resources>